// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`/shop > GET > provides a list of all shops to global admins 1`] = `
{
  "address": null,
  "color": null,
  "description": null,
  "email": null,
  "id": Any<String>,
  "imageUrl": null,
  "logo": null,
  "name": "TestShop",
  "phone": null,
  "startingDeposit": null,
}
`;

exports[`/shop > GET > provides a list of shops that the user is a member of 1`] = `
{
  "address": null,
  "color": null,
  "description": null,
  "email": null,
  "id": Any<String>,
  "imageUrl": null,
  "logo": null,
  "name": "TestShop",
  "phone": null,
  "startingDeposit": null,
}
`;

exports[`/shop > POST > should log the initial deposit 1`] = `
{
  "billingGroupId": null,
  "billingGroupInvitationLinkId": null,
  "commentId": null,
  "createdAt": Any<Date>,
  "from": null,
  "id": Any<String>,
  "jobId": null,
  "jobItemId": null,
  "ledgerItemId": Any<String>,
  "materialId": null,
  "materialImageId": null,
  "message": null,
  "resourceId": null,
  "resourceImageId": null,
  "resourceTypeId": null,
  "shopId": Any<String>,
  "to": null,
  "type": "LEDGER_ITEM_CREATED",
  "updatedAt": Any<Date>,
  "userBillingGroupId": null,
  "userId": Any<String>,
}
`;

exports[`/shop > POST > should return the created shop 1`] = `
{
  "address": null,
  "color": null,
  "description": null,
  "email": null,
  "id": Any<String>,
  "imageUrl": null,
  "logo": null,
  "name": "NewTestShop",
  "phone": null,
  "startingDeposit": null,
}
`;
